<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">DailyAssist</string>
    <!-- MainActivity -->
    <string name="no_web">设备没有联网，请联网后重试</string>
    <string name="update_timeout">更新数据超时</string>
    <string name="hold_on">请稍等</string>
    <string name="updating">数据下载中</string>
    <string name="checking_app">检查更新</string>
    <string name="begin_update">开始下载</string>
    <string name="update_fail">下载失败</string>
    <string name="no_update">数据无需更新</string>
    <string name="update_success">更新成功</string>
    <string name="exit_tip">确认要退出？</string>
    <string name="first">是否更新数据？</string>
    <!-- PrayActivity -->
    <string name="no_data">没有数据</string>

    <!-- MainFragment -->
    <string name="pray_time">祈祷时间:</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="preference">设置</string>
    <string name="today">今天</string>
    <string name="main">主页</string>
    <string name="day">日</string>
    <string name="matutinum">颂读</string>
    <string name="laudes">晨祷</string>
    <string name="horamedia">日祷</string>
    <string name="vesperae">晚祷</string>
    <string name="completorium">夜祷</string>
    <string name="mass">弥撒</string>
    <string name="memorableday">纪念</string>
    <string name="qingri">庆日</string>
    <string name="jieri">节日</string>
    <string name="tip">提示</string>
    <!-- update -->
    <string name="soft_update_no">不需要更新</string>
    <string name="soft_update_title">更新</string>
    <string name="soft_update_info">发现新版本</string>
    <string name="soft_update_updatebtn">现在更新</string>
    <string name="soft_update_later">以后更新</string>
    <string name="soft_updating">更新</string>
    <!-- preferences -->
    <string name="about">关于</string>
    <string name="about_us">关于 天主教小助手</string>
    <string name="update">检查更新</string>
    <string name="version">版本: %s</string>
    <string name="tips_content">
<!--         特别感谢：&lt;br /&gt;1.天主教小助手（微信号）&lt;br /&gt;（t.liyake.com）&lt;br /&gt;
        2.主言傳教會Verbum Dei Missionaries&lt;br /&gt;（verbumdeitwn.wordpress.com）&lt;br /&gt;&lt;br /&gt;
         	本版本（%s）更新：&lt;br /&gt;
        1.修复android4.0以下机型打开后秒退的问题；&lt;br /&gt;
      
        &lt;br /&gt;&lt;br /&gt; --> 
         </string>
    <string name="contact">感谢对本应用的支持&lt;br /&gt;
        				开发者：天主教小助手 &lt;br /&gt;
        				如果你有任何建议或疑问请联系我 &lt;br /&gt;
        				Email to: fly.workspace@gmail.com&lt;br /&gt;
        				QQ群：165780776</string>
   <string name="sun">周日</string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wed">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sat">周六</string>
    
    <string name="this_week">本周</string>
    <string name="first_week">第一周</string>
    <string name="second_week">第二周</string>
    <string name="third_week">第三周</string>
    <string name="fourth_week">第四周</string>
    <string name="fifth_week">第五周</string>
    <string name="sixth_week">第六周</string>
    <string name="update_data">更新数据</string>
    <string name="text_size">字体大小</string>
    <string name="calendar">礼仪万年历</string>
    <string name="back_today">回到今天</string>
    <string name="select_time">选择时间</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
</resources>