<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/app_name" >
        <PreferenceScreen
            android:key="about"
            android:title="@string/about" >
        </PreferenceScreen>
       <PreferenceScreen
            android:key="about_us"
            android:title="@string/about_us"
            android:summary="关于天主教小助手" >
           <intent
                android:action="org.cathassist.daily.activity.AboutUsActivity"
                android:targetClass="org.cathassist.daily.activity.AboutUsActivity"
                android:targetPackage="org.cathassist.daily" />
       </PreferenceScreen>
        <PreferenceScreen
            android:key="update"
            android:title="@string/update" >
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>