<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#0099CC" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="56dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/tabMatutinumLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_tab_selector"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/tabMatutinumImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tab_matutinum_unselected" >
            </ImageView>

            <TextView
                android:id="@+id/tabMatutinumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matutinum"
                android:textSize="10sp"
                android:textStyle="bold" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tabLaudesLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_tab_selector"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/tabLaudesImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tab_laudes_unselected" >
            </ImageView>

            <TextView
                android:id="@+id/tabLaudesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laudes"
                android:textSize="10sp"
                android:textStyle="bold" >
            </TextView>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tabHoraMediaLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_tab_selector"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/tabHoraMediaImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tab_horamedia_unselected" >
            </ImageView>

            <TextView
                android:id="@+id/tabHoraMediaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horamedia"
                android:textSize="10sp"
                android:textStyle="bold" >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tabVesperaeLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_tab_selector"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/tabVesperaeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tab_vesperae_unselected" >
            </ImageView>

            <TextView
                android:id="@+id/tabVesperaeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vesperae"
                android:textSize="10sp"
                android:textStyle="bold" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tabCompletoriumLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_tab_selector"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/tabCompletoriumImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tab_completorium_unselected" >
            </ImageView>

            <TextView
                android:id="@+id/tabCompletoriumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completorium"
                android:textSize="10sp"
                android:textStyle="bold" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>